[sql] Disable a clang intrinsic in SQLite 3.17.0.

SQLite implements sqlite3MulInt64() using __builtin_mul_overflow() for
appropriate versions of GCC or clang.  But clang appears to provide this
function in a non-standard library which our Android clang does not provide.  It
fails with an undefined symbol __mulodi4.

[It is possible that this is specific to Chromium's packaged clang, but
https://bugs.llvm.org//show_bug.cgi?id=28629 ]

BUG=701524,701518

Review-Url: https://codereview.chromium.org/2762233003
Cr-Commit-Position: refs/heads/master@{#458457}

Former-commit-id: 9e39ce92107b239f0043d55eef91e155b1471382